--- a/src/ProductPricing.Web/Views/ProductPricing/Index.cshtml
+++ b/src/ProductPricing.Web/Views/ProductPricing/Index.cshtml
@@ -1,8 +1,18 @@
 ﻿@model ProductPricing.Web.Models.ProductPricingViewModel
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Product Pricing";
 }
 
 <h2>Index</h2>
+
+<div class="row">
+    <div class="col-md-4">
+        @Html.LabelFor(x => x.Products,new {@class = "control-label"})
+    </div>
+    <div class="col-md-4">
+        @Html.DropDownListFor(x =>x.Products,Model.Products)
+    </div>
+
+</div>
 
